# CogniTrainerMobile

./: CMakeLists.txt  CategoryModulesView.qml  Main.qml  SettingsPage.qml  TestsPage.qml  TrainingsPage.qml  main.cpp
core/: BaseModule.h  Category.h  CategoryManager.cpp  CategoryManager.h  ModuleRegistry.cpp  ModuleRegistry.h
modules/ArrowSequenceGame/: ArrowSequenceGame.cpp  ArrowSequenceGame.h  ArrowSequenceGame.qml  ArrowSequenceGameSettings.qml
modules/CardGame/: Card.qml  CardGame.cpp  CardGame.h  CardGame.qml  CardGameSettings.qml
modules/CircleGame/: CircleGame.cpp  CircleGame.h  CircleGame.qml  CircleGameSettings.qml
modules/DigitSpanTest/: DigitSpanTest.cpp  DigitSpanTest.h  DigitSpanTest.qml  DigitSpanTestSettings.qml
modules/FindGame/: FindGame.cpp  FindGame.h  FindGame.qml  FindGameSettings.qml
modules/OrderGame/: Card.qml  OrderGame.cpp  OrderGame.h  OrderGame.qml  OrderGameSettings.qml
modules/ReactGame/: ReactGame.cpp  ReactGame.h  ReactGame.qml  ReactGameSettings.qml
modules/ReverseTypingGame/: ReverseTypingGame.cpp  ReverseTypingGame.h  ReverseTypingGame.qml  ReverseTypingGameSettings.qml  words.json
modules/SimonGame/: SimonButton.qml  SimonGame.cpp  SimonGame.h  SimonGame.qml  SimonGameSettings.qml
modules/StroopGame/: StroopGame.cpp  StroopGame.h  StroopGame.qml  StroopGameSettings.qml
modules/TrackGame/: TrackGame.cpp  TrackGame.h  TrackGame.qml  TrackGameSettings.qml
modules/TrailMakingTest/: TrailMakingTest.h  TrailMakingTest.qml  TrailMakingTestSettings.qml  TtrailMakingTest.cpp
modules/TypingSpeedGame/: TypingSpeedGame.cpp  TypingSpeedGame.h  TypingSpeedGame.qml  TypingSpeedGameSettings.qml  sentences.json
